fixed margin spacing between social icons and 'workflow'

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
             <!-- Workflow -->
             <div class="container-fluid">
-                <div class="subheading mb-3">Workflow</div>
+                <div class="subheading mt-5 mb-3">Workflow</div>
                 <div class="col-sm">
                     <ul class="fa-ul mb-0">
                         <li><span class="fa-li"><i class="fas fa-check"></i></span>Responsive Design</li>
@@ -222,7 +222,7 @@
                 <div class="flex-grow-1">
                     <h3 class="mb-0">University of North Carolina, Chapel Hill</h3>
                     <div class="subheading mb-3">Boot Camp Certificate</div>
-                    <div id="degree">Full-Stack Web Development</div>
+                    <div id="degree" class="lead">Full-Stack Web Development</div>
                 </div>
                 <div class="flex-shrink-0"><span class="text-primary">January 2023 - July 2023</span></div>
             </div>
@@ -230,7 +230,7 @@
                 <div class="flex-grow-1">
                     <h3 class="mb-0">University Of South Carolina</h3>
                     <div class="subheading mb-3">Bachelor of Arts</div>
-                    <div id="degree">Hospitality Management</div>
+                    <div id="degree" class="lead">Hospitality Management</div>
                 </div>
                 <div class="flex-shrink-0"><span class="text-primary">January 2015 - May 2019</span></div>
             </div>
@@ -245,6 +245,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm">
+                        <!-- Contact Section heading-->
                         <h2 class="text-primary mb-0">
                             Contact Me.
                         </h2>
@@ -252,7 +253,7 @@
                             Let's Connect!
                         </div>
                         <!-- Contact Methods -->
-                        <div class="subheading mb-5">
+                        <div class="subheading mb-4">
                             Raleigh, NC · (262) 391-5197 ·
                             <a href="mailto:mackenzie.wentworth88@gmail.com">mackenzie.wentworth88@gmail.com</a>
                         </div>
