bolded email in 'about' section'

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         </div>
                         <p class="lead mb-4">
                             For inquiries, please email me at
-                            <a href="mailto: mackenzie.wentworth88@gmail.com">mackenzie.wentworth88@gmail.com</a>
+                            <b><a href="mailto: mackenzie.wentworth88@gmail.com">mackenzie.wentworth88@gmail.com</a></b>
                         </p>
                         <div class="social-icons">
                             <a class="social-icon" href="https://www.linkedin.com/in/mackenzie-wentworth/"><i
