removed 'resume 1' option; confirmed both options work but went with the assets PDF version

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1t4C59pBpu5RcHNwAue6sn60uPEWrxE9T/view?usp=sharing">Resume 1</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="assets/MacKenzie Wentworth_JavaScript Developer.pdf">Resume 2</a></li>
+                <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1t4C59pBpu5RcHNwAue6sn60uPEWrxE9T/view?usp=sharing">Resume 1</a></li> -->
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="assets/MacKenzie Wentworth_JavaScript Developer.pdf">Resume</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
             </ul>
         </div>
