fixed spacing on cards in portfolio section; updated details on card project 1

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                 <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1t4C59pBpu5RcHNwAue6sn60uPEWrxE9T/view?usp=sharing">Resume 1</a></li> -->
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="assets/MacKenzie Wentworth_JavaScript Developer.pdf">Resume</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger"
+                        href="assets/MacKenzie Wentworth_JavaScript Developer.pdf">Resume</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -288,32 +289,24 @@
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
-                                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                    <div class="divider-custom-icon mb-4"><i class="fas fa-star"></i></div>
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image-->
-                                <img class="img-fluid rounded mb-5"
+                                <img class="img-fluid rounded mb-4"
                                     src="assets/img/portfolio/peakfitness-data-display.png" alt="..." />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-4">Link to Project: <a
-                                        href="https://github.com/Brandon5667/peak-fitness">Peak Fitness</a> </p>
-                                <p class="mb-4">As a software developer, I led the development of "Peak Fitness," a
-                                    dynamic web application that enables users to explore bike trails and access
-                                    real-time weather conditions for specific locations. Utilizing a combination of
-                                    HTML, Bulma CSS framework, JavaScript, and JQuery, I crafted an intuitive and
-                                    visually appealing user interface, ensuring a seamless user experience. My
-                                    expertise in these technologies facilitated the integration of two server-side
-                                    APIs: OpenWeather API and TrailAPI. By effectively implementing the OpenWeather
-                                    API, I provided users with accurate and up-to-date weather information,
-                                    skillfully handling API requests and dynamically updating weather components on
-                                    the frontend. Additionally, I seamlessly integrated the TrailAPI to retrieve and
-                                    display an extensive list of trails for users to explore. Throughout the
-                                    project, I collaborated closely with my team, participating in design
-                                    discussions and conducting thorough code reviews to ensure consistent
-                                    functionality and design. My contributions to "Peak Fitness" showcased my
-                                    ability to leverage diverse technologies and APIs, delivering an exceptional web
-                                    application that caters to outdoor enthusiasts seeking bike trails and current
-                                    weather updates.</p>
+                                <p class="lead">
+                                    Visit
+                                    <b><span><a href="https://github.com/Brandon5667/peak-fitness">GitHub
+                                                Repo</a></span></b>
+                                    &
+                                    <b><span><a href="https://brandon5667.github.io/peak-fitness/">Deployed
+                                                Project</a></span></b>
+                                    for more details.
+                                </p>
+                                <p class="mb-4">A <b><span class="text-primary">front-end</span></b> web application for users to search bike trails and the corresponding weather forecast for a particular location. This was a group project crafted with the combination of <b><span class="text-primary">HTML, JavaScript, Bulma CSS framework, and JQuery</span></b> to render up-to-date data retrieved from two <b><span class="text-primary">server-side APIs</span></b> and using <b><span class="text-primary">client-side storage</span></b> to store persistant data. Our choice of server-side APIs include the OpenWeather API for displaying current weather data and the TrailAPI to display a list of trails for users to explore. As part of my contributions to my team, I was able to showcase my front-end abilities through API integration and deliver a user-intuitive application that caters to outdoor enthusiasts seeking bike trails and current weather conditions.  
+                                </p>
                                 <button class="btn btn-primary" data-bs-dismiss="modal">
                                     <i class="fas fa-xmark fa-fw"></i>
                                     Close Window
@@ -343,11 +336,11 @@
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
-                                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                    <div class="divider-custom-icon mb-4"><i class="fas fa-star"></i></div>
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image-->
-                                <img class="img-fluid rounded mb-5" src="assets/img/portfolio/codeThread-homepage.png"
+                                <img class="img-fluid rounded mb-4" src="assets/img/portfolio/codeThread-homepage.png"
                                     alt="..." />
                                 <!-- Portfolio Modal - Text-->
                                 <p class="mb-4">Link to Project: <a href="https://github.com/pexApred/CodeThread">Code
@@ -386,20 +379,20 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">MVC Tech Blog
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">The Tech Blog
                                 </h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
-                                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                    <div class="divider-custom-icon mb-4"><i class="fas fa-star"></i></div>
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image-->
-                                <img class="img-fluid rounded mb-5" src="assets/img/portfolio/tech-blog-dashboard.png"
+                                <img class="img-fluid rounded mb-4" src="assets/img/portfolio/tech-blog-dashboard.png"
                                     alt="..." />
                                 <!-- Portfolio Modal - Text-->
                                 <p class="mb-4">Link to Project: <a
-                                        href="https://github.com/mackenzie-wentworth/mvc-tech-blog">MVC Tech
+                                        href="https://github.com/mackenzie-wentworth/mvc-tech-blog">The Tech
                                         Blog</a> </p>
                                 <p class="mb-4">The MVC Tech Blog is an innovative web application community
                                     tailored for software developer students like me, enabling us to share and
