updated styling of text to portfolio cards; updated text content to card project 2

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                 <img class="img-fluid rounded mb-4"
                                     src="assets/img/portfolio/peakfitness-data-display.png" alt="..." />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="lead">
+                                <div id="section-subtitle" class="subheading mb-5">
                                     Visit
                                     <b><span><a href="https://github.com/Brandon5667/peak-fitness">GitHub
                                                 Repo</a></span></b>
@@ -304,8 +304,21 @@
                                     <b><span><a href="https://brandon5667.github.io/peak-fitness/">Deployed
                                                 Project</a></span></b>
                                     for more details.
+                                </div>
+                                <p class="mb-4">A <b><span class="text-primary">front-end</span></b> web application for
+                                    users to search bike trails and the corresponding weather forecast for a particular
+                                    location.
                                 </p>
-                                <p class="mb-4">A <b><span class="text-primary">front-end</span></b> web application for users to search bike trails and the corresponding weather forecast for a particular location. This was a group project crafted with the combination of <b><span class="text-primary">HTML, JavaScript, Bulma CSS framework, and JQuery</span></b> to render up-to-date data retrieved from two <b><span class="text-primary">server-side APIs</span></b> and using <b><span class="text-primary">client-side storage</span></b> to store persistant data. Our choice of server-side APIs include the OpenWeather API for displaying current weather data and the TrailAPI to display a list of trails for users to explore. As part of my contributions to my team, I was able to showcase my front-end abilities through API integration and deliver a user-intuitive application that caters to outdoor enthusiasts seeking bike trails and current weather conditions.  
+                                <p class="mb-4">This was a group project crafted with the combination of <b><span
+                                            class="text-primary">HTML, JavaScript, CSS, Bulma CSS framework, and
+                                            JQuery</span></b> to render up-to-date data retrieved from two <b><span
+                                            class="text-primary">server-side APIs</span></b> and using <b><span
+                                            class="text-primary">client-side storage</span></b> to store persistant
+                                    data. Our choice of server-side APIs include the OpenWeather API for displaying
+                                    current weather data and the TrailAPI to display a list of trails for users to
+                                    explore. As part of my contributions to my team, I was able to showcase my front-end
+                                    abilities through API integration and deliver a user-intuitive application that
+                                    caters to outdoor enthusiasts seeking bike trails and current weather conditions.
                                 </p>
                                 <button class="btn btn-primary" data-bs-dismiss="modal">
                                     <i class="fas fa-xmark fa-fw"></i>
@@ -343,18 +356,29 @@
                                 <img class="img-fluid rounded mb-4" src="assets/img/portfolio/codeThread-homepage.png"
                                     alt="..." />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-4">Link to Project: <a href="https://github.com/pexApred/CodeThread">Code
-                                        Thread</a> </p>
-                                <p class="mb-4">Our group project is a web application developed using Node.js,
-                                    Express, Faker.js, MySQL, Handlebars.js, Bootstrap Framework, and hosted on
-                                    Heroku. The website allows Bootcamp graduates to create accounts and purchase
-                                    custom-designed cohort t-shirts, offering various options for selecting cohorts,
-                                    shirt sizes, and shirt colors. Users can browse a catalog of unique designs and
-                                    eco-friendly materials, providing a stylish way to express their pride and
-                                    commemorate their achievements. With secure authentication, efficient database
-                                    management, and seamless payment processing, the website aims to offer a
-                                    user-friendly shopping experience for graduates to showcase their cohort pride
-                                    in style.</p>
+                                <div id="section-subtitle" class="subheading mb-5">
+                                    Visit
+                                    <b><span><a href="https://github.com/pexApred/CodeThread">GitHub
+                                                Repo</a></span></b>
+                                    &
+                                    <b><span><a href="https://pacific-inlet-31648.herokuapp.com/">Deployed
+                                                Project</a></span></b>
+                                    for more details.
+                                </div>
+                                <p class="mb-4">A <b><span class="text-primary">full-stack</span></b> e-commerce website
+                                    for Coding Boot Camp graduates to browse and buy cohort t-shirts. CodeThread was a
+                                    team collaborative project motivated by the spirit of our boot camp to show off our
+                                    cohort accomplishments in style.
+                                </p>
+                                <p class="mb-4">This web app was built from scratch following the <b><span
+                                            class="text-primary">Model-View-Controller (MVC) paradigm</span></b> and
+                                    <b><span class="text-primary"> features the following technologies:</span></b> HTML,
+                                    JavaScript, CSS, Node.js, Express.js, Node Package Manager (NPM), UUID, Faker.js,
+                                    MySQL, Sequelize, Bcrypt, Dotenv, Handlebars.js, Bootstrap, and Font Awesome. With
+                                    secure authentication and efficient database management, CodeThread offers a
+                                    user-friendly shopping expereince where users can create an account and select their
+                                    desired size and color to place an order for their cohort t-shirt.
+                                </p>
                                 <button class="btn btn-primary" data-bs-dismiss="modal">
                                     <i class="fas fa-xmark fa-fw"></i>
                                     Close Window
@@ -391,9 +415,15 @@
                                 <img class="img-fluid rounded mb-4" src="assets/img/portfolio/tech-blog-dashboard.png"
                                     alt="..." />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-4">Link to Project: <a
-                                        href="https://github.com/mackenzie-wentworth/mvc-tech-blog">The Tech
-                                        Blog</a> </p>
+                                <div id="section-subtitle" class="subheading mb-5">
+                                    Visit
+                                    <b><span><a href="https://github.com/mackenzie-wentworth/mvc-tech-blog">GitHub
+                                                Repo</a></span></b>
+                                    &
+                                    <b><span><a href="https://the-tech-blog.herokuapp.com/">Deployed
+                                                Project</a></span></b>
+                                    for more details.
+                                </div>
                                 <p class="mb-4">The MVC Tech Blog is an innovative web application community
                                     tailored for software developer students like me, enabling us to share and
                                     showcase our knowledge through captivating blog posts while engaging in
