updated card project 3 content text

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                     current weather data and the TrailAPI to display a list of trails for users to
                                     explore. As part of my contributions to my team, I was able to showcase my front-end
                                     abilities through API integration and deliver a user-intuitive application that
-                                    caters to outdoor enthusiasts seeking bike trails and current weather conditions.
+                                    caters to outdoor enthusiasts seeking biking trails and current weather conditions.
                                 </p>
                                 <button class="btn btn-primary" data-bs-dismiss="modal">
                                     <i class="fas fa-xmark fa-fw"></i>
@@ -371,8 +371,8 @@
                                     cohort accomplishments in style.
                                 </p>
                                 <p class="mb-4">This web app was built from scratch following the <b><span
-                                            class="text-primary">Model-View-Controller (MVC) paradigm</span></b> and
-                                    <b><span class="text-primary"> features the following technologies:</span></b> HTML,
+                                            class="text-primary">Model-View-Controller (MVC)</span></b> paradigm and
+                                    <b><span class="text-primary">features the following technologies:</span></b> HTML,
                                     JavaScript, CSS, Node.js, Express.js, Node Package Manager (NPM), UUID, Faker.js,
                                     MySQL, Sequelize, Bcrypt, Dotenv, Handlebars.js, Bootstrap, and Font Awesome. With
                                     secure authentication and efficient database management, CodeThread offers a
@@ -424,17 +424,23 @@
                                                 Project</a></span></b>
                                     for more details.
                                 </div>
-                                <p class="mb-4">The MVC Tech Blog is an innovative web application community
-                                    tailored for software developer students like me, enabling us to share and
-                                    showcase our knowledge through captivating blog posts while engaging in
-                                    constructive discussions with our peers through comments. Embracing the best of
-                                    modern technologies such as Node.js, Express.js, MySQL, Bootstrap, and Heroku, I
-                                    have carefully crafted a seamless and dynamic user experience. Adhering to the
-                                    software design pattern Model-View-Controller (MVC), my project ensures
-                                    efficient organization and separation of concerns, empowering to build a
-                                    feature-rich and scalable platform. This project represents my dedication to
-                                    honing my development skills and fostering an inclusive and collaborative space
-                                    for learning and growth.</p>
+                                <p class="mb-4">This is a <b><span class="text-primary">full-stack</span></b> web
+                                    application built from scratch, serving as a Content Management System (CMS) style
+                                    blog site for the software developer community. The Tech Blog offers a space for
+                                    constructive and fun discussions to share knowledge with peers through blog posts
+                                    and comments.
+                                </p>
+                                <p class="mb-4">As the <b><span class="text-primary">sole full-stack
+                                            developer</span></b> for The Tech Blog, I creatively designed this project
+                                    through the <b><span class="text-primary">following modern technologies:</span></b>
+                                    HTML, JavaScript, CSS, Node.js, Express.js, Node Package Manager (NPM), MySQL,
+                                    Sequelize, Bcrypt, Dotenv, Handlebars.js, Bootstrap, and Google Fonts. Adhering to
+                                    the <b><span class="text-primary">Model-View-Controller (MVC)</span></b> paradigm,
+                                    my project ensures efficient organization and separation of concerns, empowering to
+                                    build a feature-rich and scalable platform for a seamless user experience. The Tech
+                                    Blog captures my dedication to honing my development skills and fostering a space
+                                    for learning and growth.
+                                </p>
                                 <button class="btn btn-primary" data-bs-dismiss="modal">
                                     <i class="fas fa-xmark fa-fw"></i>
                                     Close Window
