fixed 'contact' navbar link to contact id

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <hr class="m-0" />
 
     <!-- Contact Section -->
-    <section class="section-details" id="about">
+    <section class="section-details" id="contact">
         <div class="section-details-content">
             <div class="container-fluid">
                 <div class="row">
