added readme file content

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             </p>
                         </div>
                         <div class="col">
-                            <img src="assets/img/profile.jpeg" alt="responsive webite" class="img-fluid">
+                            <img src="assets/img//portfolio/profile.jpeg" alt="responsive webite" class="img-fluid">
                         </div>
                         <p class="lead mb-4">
                             For inquiries, please email me at
