fixed USC education

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <div class="d-flex flex-column flex-md-row justify-content-between">
                 <div class="flex-grow-1">
                     <h3 class="mb-0">University Of South Carolina</h3>
-                    <div class="subheading mb-3">Bachelor of Arts</div>
+                    <div class="subheading mb-3">Bachelor of Science</div>
                     <div id="degree" class="lead">Hospitality Management</div>
                 </div>
                 <div class="flex-shrink-0"><span class="text-primary">January 2015 - May 2019</span></div>
